tests/samples/0068/parse-error.txt
error[P0041]: unexpected token `[`, expected an expression
  --> 0068/code.ara:2:10
  |
2 |     $a = [];
  |          ^ unexpected token `[`, expected an expression

